Fix momentum on iOS

--- a/www/css/bin/ogx.Scroller.css
+++ b/www/css/bin/ogx.Scroller.css
@@ -4,6 +4,7 @@
     box-sizing:border-box;
     padding:0;
     overflow-y:scroll !important;  
+    -webkit-overflow-scrolling:touch;
 	position:relative;
 }
 .ogx_scroller_inner{
